--- a/style.css
+++ b/style.css
@@ -462,7 +462,7 @@ img {
     position: absolute;
   }
   .modalWindow_text {
-  width: 7rem;
+     width: 7rem;
     top: 21rem;
     left: 2rem;
     position: absolute;
@@ -482,17 +482,17 @@ img {
     -webkit-box-align: stretch;
     -ms-flex-align: stretch;
     overflow-y: auto;
-    justify-items: start;
+    justify-items: stretch;
     justify-content: space-evenly;
     align-items: end;
-     border-right: 2px solid #ccc;
+    border-right: 2px solid #ccc;
     margin-right: 20px;
     padding-right: 10px;
   }
   .modalWindow_text2 {
-    width: 9rem;
+       width: 9rem;
     top: 21rem;
-    left: 8.5rem;
+    left: 9.2rem;
     position: absolute;
     display: -ms-grid;
     display: grid;
@@ -508,8 +508,7 @@ img {
     -ms-flex-line-pack: distribute;
     -webkit-box-align: stretch;
     -ms-flex-align: stretch;
-    justify-items: start;
-  
+    justify-items: center;
   }
 }
 @media screen and (max-height: 405px) {
