--- a/style.css
+++ b/style.css
@@ -130,52 +130,54 @@
   position: absolute;
 }
 .modalWindow_text {
-  width: auto;
-  left: 19rem;
-  top: 2rem;
-  position: absolute;
-  display: -ms-grid;
-  display: grid;
-  row-gap: 0.32rem;
-  overflow-y: auto;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-line-pack: stretch;
-  align-content: stretch;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  align-items: stretch;
+     width: 10rem;
+    left: 19rem;
+    top: 2rem;
+    position: absolute;
+    display: -ms-grid;
+    display: grid;
+    row-gap: 0.32rem;
+    overflow-y: auto;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    -webkit-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    justify-items: start;
 }
 .modalWindow_text2 {
-  width: auto;
-  left: 29rem;
-  top: 2rem;
-  position: absolute;
-  display: -ms-grid;
-  display: grid;
-  row-gap: 0.32rem;
-  overflow-y: auto;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-line-pack: stretch;
-  align-content: stretch;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  align-items: stretch;
+    width: 10rem;
+    left: 30rem;
+    top: 2rem;
+    position: absolute;
+    display: -ms-grid;
+    display: grid;
+    row-gap: 0.32rem;
+    overflow-y: auto;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    -webkit-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    justify-items: start;
 }
 .togg {
   transition: 400ms all ease-in-out 50ms;
