--- a/style.scss
+++ b/style.scss
@@ -142,6 +142,12 @@ $background-color_6: #4CAF50;
 	z-index: 222;
 	border-radius: 20px;
 }
+.XClosed {
+	position: absolute;
+	top: 4px;
+	right: 9px;
+	cursor: pointer;
+}
 .modalWindow_img {
 	position: absolute;
 }
