--- a/style.scss
+++ b/style.scss
@@ -147,6 +147,7 @@ $background-color_6: #4CAF50;
 	top: 4px;
 	right: 9px;
 	cursor: pointer;
+	z-index: 22;
 }
 .modalWindow_img {
 	position: absolute;
