--- a/style.scss
+++ b/style.scss
@@ -129,6 +129,10 @@ $background-color_6: #4CAF50;
 	}
 }
 .modalWindow {
+	left: 50%;
+        transform: translateX(-50%);
+	top: 50%;
+        transform: translateY(-50%);
 	overflow: auto;
 	background: -webkit-gradient(linear, right top, left top, color-stop(49.4%, #FFF), color-stop(68.4%, rgba(255, 255, 255, 0)));
 	background: -o-linear-gradient(right, #FFF 49.4%, rgba(255, 255, 255, 0) 68.4%);
