--- a/style.scss
+++ b/style.scss
@@ -474,7 +474,9 @@ img {
 		-webkit-box-shadow: 0px 0px 16px -7px rgba(34, 60, 80, 0.2);
 		box-shadow: 0px 0px 16px -7px rgba(34, 60, 80, 0.2);
 		position: fixed;
-		left: auto;
+		top: 4%;
+    		left: 50%;
+   		transform: translateX(-50%);
 		width: 18.75rem;
 		height: 40rem;
 		overflow: auto;
