--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@
 }
 .XClosed{
  position:absolute;
+ font-size: 30px;
  top: 4px;
  right: 9px;
  z-index: 22;
@@ -275,6 +276,7 @@ a:hover {
   color: white;
 }
 h3 {
+    position: absolute;
     font-size: 0.76rem;
     bottom: 37%;
     color: #FFF;
